; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_harfbuzz.c_fz_hb_calloc.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_harfbuzz.c_fz_hb_calloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [3 x i8] c"hb\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @fz_hb_calloc(i64 %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32*, align 8
  store i64 %0, i64* %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = call i32* (...) @get_hb_context()
  store i32* %6, i32** %5, align 8
  %7 = load i32*, i32** %5, align 8
  %8 = icmp ne i32* %7, null
  %9 = zext i1 %8 to i32
  %10 = call i32 @assert(i32 %9)
  %11 = load i32*, i32** %5, align 8
  %12 = load i64, i64* %3, align 8
  %13 = load i64, i64* %4, align 8
  %14 = call i32 @fz_calloc_no_throw(i32* %11, i64 %12, i64 %13)
  %15 = call i8* @Memento_label(i32 %14, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  ret i8* %15
}

declare dso_local i32* @get_hb_context(...) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i8* @Memento_label(i32, i8*) #1

declare dso_local i32 @fz_calloc_no_throw(i32*, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
